Change 1 to more ingredients.

--- a/CreaTuPizza/Base.lproj/Main.storyboard
+++ b/CreaTuPizza/Base.lproj/Main.storyboard
@@ -299,7 +299,20 @@
                                 <color key="textColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eDp-II-aEP">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oNl-Ix-ldy">
+                                <rect key="frame" x="16" y="502" width="288" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="Xe4-3T-XTN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Confirmar">
+                                    <color key="titleColor" red="1" green="0.96358409889999996" blue="0.86271515539999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="6nI-Ub-r9A" kind="show" identifier="IngredientsSegue" id="j4p-Qu-WHJ"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eDp-II-aEP">
                                 <rect key="frame" x="0.0" y="151" width="320" height="343"/>
                                 <color key="backgroundColor" red="1" green="0.96358409889999996" blue="0.86271515539999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
@@ -322,19 +335,6 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oNl-Ix-ldy">
-                                <rect key="frame" x="16" y="502" width="288" height="58"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="58" id="Xe4-3T-XTN"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Confirmar">
-                                    <color key="titleColor" red="1" green="0.96358409889999996" blue="0.86271515539999999" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <segue destination="6nI-Ub-r9A" kind="show" identifier="IngredientsSegue" id="j4p-Qu-WHJ"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.96358409889999996" blue="0.86271515539999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -373,12 +373,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avI-qv-LuV">
-                                <rect key="frame" x="16" y="171" width="288" height="315"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tu pizza!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v6g-sq-IiY">
                                 <rect key="frame" x="16" y="77" width="288" height="58"/>
                                 <constraints>
@@ -388,12 +382,32 @@
                                 <color key="textColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A50-JX-sQR">
+                                <rect key="frame" x="12" y="502" width="296" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="YRr-lv-uM0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Confirmar">
+                                    <color key="titleColor" red="1" green="0.96358409889999996" blue="0.86271515539999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avI-qv-LuV">
+                                <rect key="frame" x="16" y="171" width="288" height="315"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.96358409889999996" blue="0.86271515539999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="A50-JX-sQR" secondAttribute="trailing" constant="-4" id="43H-Fu-obO"/>
                             <constraint firstItem="v6g-sq-IiY" firstAttribute="top" secondItem="YER-vR-Ytc" secondAttribute="bottom" constant="13" id="GZ8-f6-PUo"/>
                             <constraint firstAttribute="trailingMargin" secondItem="v6g-sq-IiY" secondAttribute="trailing" id="Hdh-oO-Bfj"/>
+                            <constraint firstItem="yuL-7i-i84" firstAttribute="top" secondItem="A50-JX-sQR" secondAttribute="bottom" constant="8" id="MWa-p7-B1V"/>
                             <constraint firstAttribute="trailingMargin" secondItem="avI-qv-LuV" secondAttribute="trailing" id="atn-40-j2g"/>
+                            <constraint firstItem="A50-JX-sQR" firstAttribute="leading" secondItem="vA0-zD-RWL" secondAttribute="leadingMargin" constant="-4" id="bea-Ay-Myv"/>
+                            <constraint firstItem="A50-JX-sQR" firstAttribute="top" secondItem="avI-qv-LuV" secondAttribute="bottom" constant="16" id="cF7-kz-Zqn"/>
                             <constraint firstItem="avI-qv-LuV" firstAttribute="top" secondItem="v6g-sq-IiY" secondAttribute="bottom" constant="36" id="ds2-C2-pQ5"/>
                             <constraint firstAttribute="leadingMargin" secondItem="avI-qv-LuV" secondAttribute="leading" id="pU9-dA-y2c"/>
                             <constraint firstAttribute="leadingMargin" secondItem="v6g-sq-IiY" secondAttribute="leading" id="x3a-AG-aeb"/>
@@ -402,6 +416,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="568"/>
                     <connections>
+                        <outlet property="confirmButton" destination="A50-JX-sQR" id="HX2-2Y-FA3"/>
                         <outlet property="confirmText" destination="avI-qv-LuV" id="eJS-0L-eGe"/>
                     </connections>
                 </viewController>
